--- a/src/VBox/Additions/WINNT/VBoxTray/Makefile.kmk
+++ b/src/VBox/Additions/WINNT/VBoxTray/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33966 2010-11-11 10:32:07Z andreas.loeffler@oracle.com $
+# $Id: Makefile.kmk 34080 2010-11-15 17:18:03Z andreas.loeffler@oracle.com $
 ## @file
 # Sub-Makefile for VBoxTray.
 #
@@ -35,6 +35,7 @@ VBoxTray_SOURCES  = \
 	VBoxDisplay.cpp \
 	VBoxVRDP.cpp \
 	VBoxRestore.cpp \
+	VBoxIPC.cpp \
 	VBoxHelpers.cpp \
 	VBoxTray.rc
 ifdef VBOX_WITH_GUEST_PROPS
