--- a/src/VBox/Devices/Makefile.kmk
+++ b/src/VBox/Devices/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33649 2010-11-01 13:28:21Z noreply@oracle.com $
+# $Id: Makefile.kmk 34100 2010-11-16 10:51:40Z knut.osmundsen@oracle.com $
 ## @file
 # Top-level sub-makefile for the devices, drivers and services.
 #
@@ -1122,23 +1122,32 @@ ServicesR0_SOURCES   = \
 	Network/SrvIntNetR0.cpp
 
 
-#
-# The EHCI (USB 2.0) Extension Pack Modules.
-#
-if defined(VBOX_WITH_USB) && defined(VBOX_WITH_EXTPACK_PUEL)
- DLLS += VBoxEhciR3
- VBoxEhciR3_TEMPLATE = VBoxR3ExtPackPuel
- VBoxEhciR3_SOURCES  = USB/DevEHCI.cpp
+ifdef VBOX_WITH_EXTPACK_PUEL
+ #
+ # The EHCI (USB 2.0) Extension Pack Modules.
+ #
+ if defined(VBOX_WITH_USB)
+  DLLS += VBoxEhciR3
+  VBoxEhciR3_TEMPLATE = VBoxR3ExtPackPuel
+  VBoxEhciR3_SOURCES  = USB/DevEHCI.cpp
 
- SYSMODS += VBoxEhciR0
- VBoxEhciR0_TEMPLATE = VBoxR0ExtPackPuel
- VBoxEhciR0_SOURCES  = USB/DevEHCI.cpp
+  SYSMODS += VBoxEhciR0
+  VBoxEhciR0_TEMPLATE = VBoxR0ExtPackPuel
+  VBoxEhciR0_SOURCES  = USB/DevEHCI.cpp
 
- ifdef VBOX_WITH_RAW_MODE
-  SYSMODS += VBoxEhciRC
-  VBoxEhciRC_TEMPLATE = VBoxRcExtPackPuel
-  VBoxEhciRC_SOURCES  = USB/DevEHCI.cpp
+  ifdef VBOX_WITH_RAW_MODE
+   SYSMODS += VBoxEhciRC
+   VBoxEhciRC_TEMPLATE = VBoxRcExtPackPuel
+   VBoxEhciRC_SOURCES  = USB/DevEHCI.cpp
+  endif
  endif
+
+ #
+ # The Intel PXE rom.
+ #
+ INSTALLS += VBoxExtPackPuelInsRoms
+ VBoxExtPackPuelInsRoms_TEMPLATE = VBoxInsExtPackPuel
+ VBoxExtPackPuelInsRoms_SOURCES = PC/PXE/pxepcnet.rom=>PXE-Intel.rom
 endif # VBOX_WITH_USB && VBOX_WITH_EXTPACK_PUEL
 
 
