--- a/Makefile.kmk
+++ b/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 34075 2010-11-15 15:59:31Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 34113 2010-11-16 12:52:04Z noreply@oracle.com $
 ## @file
 # Top level makefile.
 #
@@ -1121,6 +1121,7 @@ incs:
 	$(SED) -f include/VBox/err.sed     --output include/VBox/err.mac           include/VBox/err.h
 	$(APPEND) include/VBox/err.mac '%include "iprt/err.mac"'
 	$(SED) -f include/VBox/err.sed     --output include/iprt/err.mac           include/iprt/err.h
+	$(SED) -f include/VBox/various.sed --output include/VBox/apic.mac          include/VBox/apic.h
 	$(SED) -f include/VBox/various.sed --output include/VBox/x86.mac           include/VBox/x86.h
 	$(SED) -f include/VBox/various.sed --output include/VBox/param.mac         include/VBox/param.h
 	$(SED) -f include/VBox/various.sed --output include/VBox/VMMDevTesting.mac include/VBox/VMMDevTesting.h
