--- a/src/VBox/Additions/WINNT/Makefile.kmk
+++ b/src/VBox/Additions/WINNT/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32690 2010-09-22 10:09:36Z andreas.loeffler@oracle.com $
+# $Id: Makefile.kmk 34137 2010-11-17 11:42:41Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the Windows NT++ Guest Additions.
 #
@@ -25,9 +25,6 @@ include $(PATH_SUB_CURRENT)/VBoxTray/Makefile.kmk
 include $(PATH_SUB_CURRENT)/VBoxGINA/Makefile.kmk
 include $(PATH_SUB_CURRENT)/VBoxCredProv/Makefile.kmk
 include $(PATH_SUB_CURRENT)/VBoxHook/Makefile.kmk
-ifndef VBOX_OSE
- include $(PATH_SUB_CURRENT)/Network/Makefile.kmk
-endif
 ifdef VBOX_WITH_WIN32_ADDITIONS_SHAREDFOLDERS
  include $(PATH_SUB_CURRENT)/SharedFolders/Makefile.kmk
 endif
