--- a/src/VBox/Additions/WINNT/Installer/Loader/Makefile.kmk
+++ b/src/VBox/Additions/WINNT/Installer/Loader/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 31661 2010-08-13 15:49:24Z noreply@oracle.com $
+# $Id: Makefile.kmk 34144 2010-11-17 20:08:31Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for the Guest Additions loader.
 #
@@ -33,9 +33,9 @@ if "$(KBUILD_TARGET_ARCH)" == "x86"
  	/DISALLOWLIB:libcmt.lib
 
  VBoxWindowsAdditions_LIBS     = \
- 	$(PATH_TOOL_$(TEMPLATE_VBOXR3EXE_TOOL)_LIB)/oldnames.lib \
- 	$(PATH_TOOL_$(TEMPLATE_VBOXR3EXE_TOOL)_LIB)/libcmt.lib \
-	$(PATH_TOOL_$(TEMPLATE_VBOXR3EXE_TOOL)_LIB)/libcpmt.lib
+ 	$(PATH_TOOL_$(TEMPLATE_VBOXR3EXE_TOOL.$(BUILD_TARGET_ARCH))_LIB)/oldnames.lib \
+ 	$(PATH_TOOL_$(TEMPLATE_VBOXR3EXE_TOOL.$(BUILD_TARGET_ARCH))_LIB)/libcmt.lib \
+	$(PATH_TOOL_$(TEMPLATE_VBOXR3EXE_TOOL.$(BUILD_TARGET_ARCH))_LIB)/libcpmt.lib
 
  # Version stuff.
  VBoxWindowsAdditions.cpp_DEFS += VBOX_SVN_REV=$(VBOX_SVN_REV)
