--- a/src/libs/Makefile.kmk
+++ b/src/libs/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 33590 2010-10-29 08:55:09Z vitali.pelenjow@oracle.com $
+# $Id: Makefile.kmk 34190 2010-11-19 10:01:56Z noreply@oracle.com $
 ## @file
 # Top-level makefile for the external libraries.
 #
@@ -51,7 +51,7 @@ endif
 # OpenSSL.
 if !defined(VBOX_ONLY_SDK) \
  && "$(SDK_VBOX_OPENSSL_INCS)" == "$(SDK_VBOX_OPENSSL_VBOX_DEFAULT_INCS)"
- include $(PATH_SUB_CURRENT)/openssl-0.9.8o/Makefile.kmk
+ include $(PATH_SUB_CURRENT)/openssl-0.9.8p/Makefile.kmk
 endif
 
 # libjpeg for VRDP video redirection
