--- a/src/VBox/Additions/common/Makefile.kmk
+++ b/src/VBox/Additions/common/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 32690 2010-09-22 10:09:36Z andreas.loeffler@oracle.com $
+# $Id: Makefile.kmk 34817 2010-12-07 21:36:12Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for the common addition code.
 #
@@ -19,8 +19,8 @@ SUB_DEPTH = ../../../..
 include	$(KBUILD_PATH)/subheader.kmk
 
 # Include sub-makefile.
-include $(PATH_SUB_CURRENT)/VBoxGuestLib/Makefile.kmk
 ifndef VBOX_ONLY_TESTSUITE
+ include $(PATH_SUB_CURRENT)/VBoxGuestLib/Makefile.kmk
  include $(PATH_SUB_CURRENT)/VBoxControl/Makefile.kmk
  if1of ($(KBUILD_TARGET), freebsd linux os2 solaris win)
   include $(PATH_SUB_CURRENT)/VBoxGuest/Makefile.kmk
