--- a/src/VBox/Frontends/VBoxManage/Makefile.kmk
+++ b/src/VBox/Frontends/VBoxManage/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 34587 2010-12-01 20:30:02Z alexander.eichner@oracle.com $
+# $Id: Makefile.kmk 34913 2010-12-09 17:20:41Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for VBoxManage (the cli frontend).
 #
@@ -35,6 +35,7 @@ else # !VBOX_ONLY_DOCS
  	VBoxManage.cpp \
  	VBoxInternalManage.cpp \
  	VBoxManageControlVM.cpp \
+ 	VBoxManageDebugVM.cpp \
  	VBoxManageDHCPServer.cpp \
  	VBoxManageDisk.cpp \
  	$(if $(VBOX_WITH_GUEST_PROPS),VBoxManageGuestProp.cpp) \
