--- a/src/VBox/ValidationKit/utils/Makefile.kmk
+++ b/src/VBox/ValidationKit/utils/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 69985 2017-12-07 15:46:13Z alexander.eichner@oracle.com $
+# $Id: Makefile.kmk 70070 2017-12-11 17:47:43Z alexander.eichner@oracle.com $
 ## @file
 # VirtualBox Validation Kit - Utilities.
 #
@@ -34,7 +34,9 @@ include $(PATH_SUB_CURRENT)/TestExecServ/Makefile.kmk
 include $(PATH_SUB_CURRENT)/cpu/Makefile.kmk
 include $(PATH_SUB_CURRENT)/misc/Makefile.kmk
 include $(PATH_SUB_CURRENT)/network/Makefile.kmk
-include $(PATH_SUB_CURRENT)/serial/Makefile.kmk
+ifneq ($(KBUILD_TARGET),os2)
+ include $(PATH_SUB_CURRENT)/serial/Makefile.kmk
+endif
 ifeq ($(KBUILD_TARGET),win)
  include $(PATH_SUB_CURRENT)/nt/Makefile.kmk
 endif
