--- a/src/VBox/Additions/common/VBoxGuest/Makefile.kmk
+++ b/src/VBox/Additions/common/VBoxGuest/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 69531 2017-10-30 17:59:26Z noreply@oracle.com $
+# $Id: Makefile.kmk 70084 2017-12-12 17:35:05Z knut.osmundsen@oracle.com $
 ## @file
 # Makefile for the Cross Platform Guest Additions Driver.
 #
@@ -226,6 +226,20 @@ ifeq ($(KBUILD_TARGET),linux)
  vboxguest-sh_MODE      = a+rx,u+w
  vboxguest-sh_SOURCES   = $(subst ",,$(FILES_VBOXGUEST_BIN))
 
+ #
+ # Build test for the Guest Additions kernel module (kmk check).
+ #
+ if   defined(VBOX_WITH_TESTCASES) \
+  && !defined(VBOX_ONLY_SDK) \
+  && !defined(VBOX_ONLY_DOCS) \
+  && !defined(VBOX_ONLY_VALIDATIONKIT) \
+  && !defined(VBOX_WITHOUT_LINUX_TEST_BUILDS) \
+  && "$(KBUILD_TARGET)" == "linux" \
+  && "$(KBUILD_HOST_ARCH)" == "$(KBUILD_TARGET_ARCH)"
+  ifneq ($(KERN_DIR),)
+   $(foreach module, vboxguest-src, $(evalcall2 VBOX_LINUX_GENERATE_KMOD_TEST))
+  endif
+ endif
 endif # Linux
 
 ifeq ($(KBUILD_TARGET),freebsd)
