--- a/src/VBox/Additions/linux/Makefile.kmk
+++ b/src/VBox/Additions/linux/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 69531 2017-10-30 17:59:26Z noreply@oracle.com $
+# $Id: Makefile.kmk 70084 2017-12-12 17:35:05Z knut.osmundsen@oracle.com $
 ## @file
 # Makefile for the linux guest additions base directory.
 #
@@ -362,11 +362,9 @@ if   defined(VBOX_WITH_TESTCASES) \
  && !defined(VBOX_WITHOUT_LINUX_TEST_BUILDS) \
  && "$(KBUILD_TARGET)" == "linux" \
  && "$(KBUILD_HOST_ARCH)" == "$(KBUILD_TARGET_ARCH)"
-
  ifneq ($(KERN_DIR),)
-  $(foreach module, vboxguest-src vboxsf-src vboxvideo-src, $(eval $(VBOX_LINUX_GENERATE_KMOD_TEST)))
+  $(foreach module, vboxsf-src vboxvideo-src, $(evalcall2 VBOX_LINUX_GENERATE_KMOD_TEST))
  endif
-
 endif
 
 
