--- a/src/VBox/Additions/x11/Makefile.kmk
+++ b/src/VBox/Additions/x11/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 69348 2017-10-26 13:47:29Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 70135 2017-12-14 16:30:04Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for the X11 Guest Additions.
 #
@@ -23,7 +23,7 @@ if1of ($(KBUILD_TARGET), freebsd linux netbsd openbsd solaris)
  include $(PATH_SUB_CURRENT)/VBoxClient/Makefile.kmk
  ifndef VBOX_NO_LEGACY_XORG_X11
   include $(PATH_SUB_CURRENT)/vboxvideo/Makefile.kmk
-  ifneq ($(KBUILD_TARGET), solaris)
+  ifn1of ($(KBUILD_TARGET), netbsd solaris)
    include $(PATH_SUB_CURRENT)/vboxmouse/Makefile.kmk
   endif
   # This should logically only be controlled by VBOX_NO_LEGACY_XORG_X11,
