--- a/src/VBox/Additions/WINNT/Installer/Makefile.kmk
+++ b/src/VBox/Additions/WINNT/Installer/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 69111 2017-10-17 14:26:02Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 70164 2017-12-15 17:32:56Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the Windows Guest Additions Installer.
 #
@@ -89,8 +89,7 @@ ifeq ($(KBUILD_TARGET_ARCH),amd64)
 endif
 ifeq ($(KBUILD_TARGET_ARCH),x86)
 DRIVER_FILES += \
-	$(PATH_STAGE_BIN)/additions/VBoxMouseNT.sys \
-	$(PATH_STAGE_BIN)/additions/VBoxGuestNT.sys
+	$(PATH_STAGE_BIN)/additions/VBoxMouseNT.sys
 endif
 DRIVER_FILES += \
 	$(PATH_STAGE_BIN)/additions/VBoxVideo.inf \
