--- a/src/VBox/Runtime/tools/Makefile.kmk
+++ b/src/VBox/Runtime/tools/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 69795 2017-11-21 16:29:49Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 70256 2017-12-21 06:13:13Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT tools.
 #
@@ -116,6 +116,11 @@ if !defined(VBOX_ONLY_BUILD)
   RTHttp_TEMPLATE = VBoxR3Tool
   RTHttp_SOURCES = RTHttp.cpp
  endif
+
+ # RTLdrCheckImports - import checker.
+ PROGRAMS += RTLdrCheckImports
+ RTLdrCheckImports_TEMPLATE = VBoxR3Tool
+ RTLdrCheckImports_SOURCES = RTLdrCheckImports.cpp
 
  # RTMkDir - our mkdir clone.
  PROGRAMS += RTMkDir
