--- a/src/VBox/Runtime/tools/Makefile.kmk
+++ b/src/VBox/Runtime/tools/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 70256 2017-12-21 06:13:13Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 70311 2017-12-22 11:47:24Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT tools.
 #
@@ -59,6 +59,12 @@ if !defined(VBOX_ONLY_DOCS)
  bldRTSignTool_SOURCES = RTSignTool.cpp
  bldRTSignTool_DEFS = IPRT_IN_BUILD_TOOL
  bldRTSignTool_POST_CMDS.win = $(VBOX_SIGN_IMAGE_CMDS)
+
+ # RTLdrCheckImports - import checker.
+ PROGRAMS += bldRTLdrCheckImports
+ bldRTLdrCheckImports_TEMPLATE = VBoxAdvBldProg
+ bldRTLdrCheckImports_DEFS = IPRT_IN_BUILD_TOOL
+ bldRTLdrCheckImports_SOURCES = RTLdrCheckImports.cpp
 
 endif
 
@@ -121,6 +127,7 @@ if !defined(VBOX_ONLY_BUILD)
  PROGRAMS += RTLdrCheckImports
  RTLdrCheckImports_TEMPLATE = VBoxR3Tool
  RTLdrCheckImports_SOURCES = RTLdrCheckImports.cpp
+ RTLdrCheckImports_SOURCES += ../VBox/LoadVBoxDDU.cpp
 
  # RTMkDir - our mkdir clone.
  PROGRAMS += RTMkDir
