--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 70336 2017-12-24 14:38:14Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 70345 2017-12-26 15:51:56Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT.
 #
@@ -1554,7 +1554,9 @@ RuntimeGuestR3_SOURCES.win.x86               += \
 	r3/win/vcc100-ntdll-fakes.cpp \
 	r3/win/vcc100-ntdll-fakesA.asm \
 	r3/win/vcc100-ws2_32-fakes.cpp \
-	r3/win/vcc100-ws2_32-fakesA.asm
+	r3/win/vcc100-ws2_32-fakesA.asm \
+	r3/win/vcc100-shell32-fakes.cpp \
+	r3/win/vcc100-shell32-fakesA.asm \
 
 #
 # RuntimeGuestR3-x86 - Same as RuntimeGuestR3, except that it's targeting x86.
