--- a/src/VBox/ValidationKit/testboxscript/Makefile.kmk
+++ b/src/VBox/ValidationKit/testboxscript/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 69111 2017-10-17 14:26:02Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 70377 2017-12-28 20:48:14Z knut.osmundsen@oracle.com $
 ## @file
 # VirtualBox Validation Kit - TestBox Script.
 #
@@ -74,6 +74,7 @@ TestBoxHelper_INST     = $(INST_TESTBOXSCRIPT)$(KBUILD_TARGET)/$(KBUILD_TARGET_A
 TestBoxHelper_SOURCES  = TestBoxHelper.cpp
 TestBoxHelper_LIBS.win = $(PATH_SDK_$(VBOX_WINDDK)_LIB)/wbemuuid.lib
 TestBoxHelper_LDFLAGS.darwin = -framework CoreFoundation
+TestBoxHelper_VBOX_IMPORT_CHECKER.win.x86 = $(NO_SUCH_VARIABLE)
 
 
 #
