--- a/src/VBox/ValidationKit/utils/cpu/Makefile.kmk
+++ b/src/VBox/ValidationKit/utils/cpu/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 69111 2017-10-17 14:26:02Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 70377 2017-12-28 20:48:14Z knut.osmundsen@oracle.com $
 ## @file
 # VirtualBox Validation Kit - CPU Test Utilities.
 #
@@ -55,6 +55,7 @@ cidet-app_SOURCES  = \
 cidet-app_DEFS = IN_DIS
 cidet-app_DEFS.linux = CIDET_REDUCED_CTX
 cidet-app_LIBS = $(PATH_STAGE_LIB)/DisasmR3Static$(VBOX_SUFF_LIB)
+cidet-app_VBOX_IMPORT_CHECKER.win.x86 = $(NO_SUCH_VARIABLE) # doesn't work on NT4 yet.
 
 #PROGRAMS += rdtsc
 #rdtsc_TEMPLATE = VBoxValidationKitR3
