--- a/src/VBox/Additions/WINNT/VBoxTray/Makefile.kmk
+++ b/src/VBox/Additions/WINNT/VBoxTray/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 69111 2017-10-17 14:26:02Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 70378 2017-12-28 20:48:34Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for VBoxTray.
 #
@@ -42,6 +42,9 @@ VBoxTray_SOURCES  = \
 	VBoxIPC.cpp \
 	VBoxHelpers.cpp \
 	VBoxTray.rc
+VBoxTray_USES.win = vboximportchecker
+VBoxTray_VBOX_IMPORT_CHECKER.win.x86 = nt4 #nt350
+VBoxTray_VBOX_IMPORT_CHECKER.win.amd64 = xp64
 ifdef VBOX_WITH_DRAG_AND_DROP
  VBoxTray_DEFS     += \
 	VBOX_WITH_DRAG_AND_DROP \
