--- a/Makefile.kmk
+++ b/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 71485 2018-03-23 12:09:19Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 71568 2018-03-29 12:42:15Z knut.osmundsen@oracle.com $
 ## @file
 # Top level makefile.
 #
@@ -920,7 +920,11 @@ endif
 #
 # Alias for kmk_time.  Used by both the additions and validation kit build setups.
 #
-VBOX_KMK_TIME = $(KBUILD_BIN_PATH)/kmk_time
+ifeq ($(KBUILD_HOST),win)
+VBOX_KMK_TIME = $(KBUILD_BIN_PATH)/kmk_time$(HOSTSUFF_EXE) --unquoted --
+else
+VBOX_KMK_TIME = $(KBUILD_BIN_PATH)/kmk_time$(HOSTSUFF_EXE) --
+endif
 
 
 #
