--- a/src/VBox/Main/Makefile.kmk
+++ b/src/VBox/Main/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 73551 2018-08-07 16:41:59Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 73716 2018-08-16 15:58:57Z klaus.espenlaub@oracle.com $
 ## @file
 # Makefile for the VBox Main module.
 #
@@ -455,10 +455,12 @@ VBoxSVC_SOURCES = \
 	src-server/BIOSSettingsImpl.cpp \
 	src-server/ClientWatcher.cpp \
 	src-server/ClientToken.cpp \
-	src-server/CloudAPI.cpp \
-	src-server/CloudClientImpl.cpp \
-	src-server/CloudUserProfilesImpl.cpp \
-	src-server/CloudUserProfileManagerImpl.cpp \
+	src-server/CloudProviderManagerImpl.cpp \
+	$(if $(VBOX_WITH_CLOUD_PROVIDERS_IN_EXTPACK),, \
+		src-server/CloudAPI.cpp \
+		src-server/CloudClientImpl.cpp \
+		src-server/OCIProvider.cpp \
+		src-server/OCIProfile.cpp) \
 	src-server/DHCPServerImpl.cpp \
 	src-server/NetworkServiceRunner.cpp \
 	src-server/NATNetworkImpl.cpp \
