--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 73751 2018-08-18 01:07:16Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 73761 2018-08-19 13:42:25Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT.
 #
@@ -747,6 +747,8 @@ RuntimeR3_SOURCES.x86 += \
 	common/asm/ASMSerializeInstruction-cpuid.asm \
 	common/asm/ASMSerializeInstruction-iret.asm \
 	common/asm/ASMSerializeInstruction-rdtscp.asm \
+	common/dbg/dbgstackdumpself.cpp \
+	common/dbg/dbgstackdumpself-amd64-x86.asm \
 	common/math/bignum-amd64-x86.asm
 RuntimeR3_SOURCES.amd64 += \
 	common/asm/ASMCpuIdExSlow.asm \
@@ -768,6 +770,8 @@ RuntimeR3_SOURCES.amd64 += \
 	common/asm/ASMSerializeInstruction-cpuid.asm \
 	common/asm/ASMSerializeInstruction-iret.asm \
 	common/asm/ASMSerializeInstruction-rdtscp.asm \
+	common/dbg/dbgstackdumpself.cpp \
+	common/dbg/dbgstackdumpself-amd64-x86.asm \
 	common/math/bignum-amd64-x86.asm \
 	common/math/RTUInt128MulByU64.asm
 
